k8s/hdhomerun/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://hdhomerun.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Media
    gethomepage.dev/icon: hdhomerun
    gethomepage.dev/name: HDHomeRun
    gethomepage.dev/weight: '30'
    gethomepage.dev/widget.type: hdhomerun
    gethomepage.dev/widget.url: &service http://hdhomerun-service
    gethomepage.dev/siteMonitor: *service
    gethomepage.dev/external: 'true'
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: &host hdhomerun.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
